# django-restframework-types

./: README.md  commands.txt  pyproject.toml
backend/backend/: settings.py
backend/social/user/: models.py  serializers.py  views.py
